--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,7 +1,6 @@
 .modal{
   position: fixed;
   display: flex;
-  overflow: hidden;
   align-items: center;
   justify-content: center;
   inset: 0;
@@ -15,6 +14,8 @@
 .modal--active{
   opacity: 1;
   z-index: 2;
+  width: 100vw;
+  height: 100vh;
   pointer-events: auto;
   transition: opacity .3s;
   --transform: scale(1);
